Finilize version 1 for the VTO Mobile project

--- a/js/vto.html
+++ b/js/vto.html
@@ -1,4 +1,66 @@
 
+<style>
+	.vto-hide {display:none;}
+	#sgh_vto_overlay {
+		background-color: #fff;
+	    width: 100%;
+	    height: 100%;
+	    position: fixed;
+	    padding: 20px 10px;
+	    z-index: 20001;
+	    top: 0px;
+	    left: 0px;
+	}
+	#sgh-vto-overlay_container {
+    	position: relative;
+    	height: 100%;
+	}
+	#sgh-vto-overlay_video {
+		display: none;
+	}
+	a.button.white.button_back-arrow {
+	    padding: 15px;
+	    box-sizing: border-box;
+	    text-align: left;
+	    float: left;
+	    position: relative;
+    	z-index: 2;
+	}
+	span#user-id {
+	    font-size: 1px;
+	    visibility: hidden;
+	}
+	a#vto_start_button {
+	    position: absolute;
+	    bottom: 20px;
+	}
+	div#my_vto_div {
+	    padding: 0px 15px;
+	}
+	.vto-mobile.fullscreenable {
+	    height: inherit;
+	}
+	#sgh-vto-overlay-video-buttons {
+		padding: 10px 0;
+	}
+	#sgh-vto-overlay-video-buttons a.vto-start-button,
+	#sgh-vto-overlay-video-buttons a.vto-delete-button  {
+		text-decoration: underline;
+		padding: 5px 0px;
+		display:  inline-block;
+
+	}
+	#sgh-vto-overlay-video-buttons a.vto-start-button {
+		text-align: left;
+	}
+
+	#sgh-vto-overlay-video-buttons a.vto-delete-button{
+		text-align:  right;
+		float: right;
+	}
+</style>
+
+
 <span class="vto-hide" id="user-id">c4a6953b-986c-4549-a927-a7c5d4ea1054</span>
 <div class="vto-hide" id="my_vto_div">my_vto_div</div>
 <span id="video-id" class="vto-hide">&quot;video-id</span> 
