Mobile VTO API 1.0

--- a/js/vto.html
+++ b/js/vto.html
@@ -10,6 +10,7 @@
 	    z-index: 20001;
 	    top: 0px;
 	    left: 0px;
+	    text-transform: none;
 	}
 	#sgh-vto-overlay_container {
     	position: relative;
@@ -27,6 +28,7 @@
     	z-index: 2;
 	}
 	span#user-id {
+		display: block;
 	    font-size: 1px;
 	    visibility: hidden;
 	}
